--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,12 @@ header nav {
     margin-top: 20px;
 }
 
+header a:link {
+    text-decoration: none;
+    outline: none;
+    color: inherit;
+}
+
 header a:hover {
     color: #df8e00;
 }
@@ -145,4 +151,10 @@ header a:hover {
 
 #boxes h1 {
     font-size: 50px;
+    border-bottom: #976000 2px solid;
+}
+
+footer {
+    float: right;
+    margin-right: 30px;
 }
